--- a/tinker/admin/user_roles/templates/user_roles_home.html
+++ b/tinker/admin/user_roles/templates/user_roles_home.html
@@ -44,7 +44,7 @@
                     type: 'POST',
                     url: '{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}',
                     data: {'role': role, 'username': username },
-                        success: function(){
+                        success: function(data){
                             window.location.href = data;
                         },
                         error: function(){
