--- a/tinker/templates/tinker_base.html
+++ b/tinker/templates/tinker_base.html
@@ -15,6 +15,7 @@
 
         <div class="main-panel">
             {{ nav.render(title) }}
+            |{{ session['admin_viewer']|safe }}|
             {% include 'admin_user_bar.html' %}
             {% block main_content %}
             {% endblock %}
