--- a/tinker/templates/user_roles_home.html
+++ b/tinker/templates/user_roles_home.html
@@ -40,17 +40,12 @@
                     role = $('#role').val();
                 if( $(this).attr('id') == 'view-by-username')
                     username = $('#username').val();
-                $.ajax({
-                    type: 'POST',
-                    url: '{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}',
-                    data: {'role': role, 'username': username },
-                        success: function(data){
-                            alert(data);
-                            window.location.href = '/';
-                        },
-                        error: function(){
-                            //TODO Write an error function
-                        }
+                $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'role': role, 'username': username }, function (data) {
+                    if( data == 'error'){
+                        alert('Error (need to write in more robust error notifications)');
+                    } else {
+                        window.location.href = data;
+                    }
                 });
             })
         });
