small code fixes and comments

--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -73,6 +73,7 @@
                                 <a href="{{ url_for('user_roles.UserRolesView:index') }}">
                                     <i class="fa fa-user-secret" aria-hidden="true"></i>
                                     <p class="admin-list-item">User Test Roles</p>
+                                    {# doesnt work locally #}
                                 </a>
                             </li>
                             <li>
