--- a/tinker/templates/user_roles_home.html
+++ b/tinker/templates/user_roles_home.html
@@ -1,6 +1,6 @@
 {% extends "tinker_base.html" %}
 
-{% set title = 'User Roles' %}
+{% set title = 'User Roles (Doesnt work Locally)' %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
